# backdoor

./: DEPLOYMENT.md  PRODUCTION_DEPLOY.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  build.bat  build.sh  configure_production.bat  debug_test.bat  test.bat  test.sh  test_local.bat  troubleshoot_connection.bat
C2_server/: Cargo.toml  app.py  requirements.txt
C2_server/src/: lib.rs  main.rs
C2_server/templates/: client_view.html  index.html
backdoor/: Cargo.toml
backdoor/src/: main.rs
c2_client/: Cargo.toml
c2_client/src/: lib.rs  main.rs  main.rs.backup
old_c2_server/: app.py  requirements.txt
old_c2_server/templates/: client_view.html
output/: client_config.toml  server_config.toml
production_deploy/: DEPLOY.md  client_config.toml
