[package]
name = "c2_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rsa = { version = "0.9.8", features = ["pem"] }
rand = "0.8.5"
sha2 = "0.10.8"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
crossterm = "0.27.0"

[features]
default = []
