[package]
name = "backdoor"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
whoami = "1.5"
winreg = "0.52"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["pem"] }

