[package]
name = "c2_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rsa = { version = "0.9.8", features = ["pem"] }
rand = "0.8.5"
whoami = "1.5.1"
clap = { version = "4.5.8", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["winuser", "wincon", "processthreadsapi", "handleapi"] }

[target.'cfg(unix)'.dependencies]
nix = "0.27.1"

[features]
default = []

# Build configuration for stealth
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
